--- a/app/data/locales/en-US.json
+++ b/app/data/locales/en-US.json
@@ -1,14 +1,43 @@
 {
-    "header": {
-      "promoText": "Free shipping on orders over R$ 199",
-      "navLinks": [
-        { "title": "Home", "link": "#" },
-        { "title": "Products", "link": "#products" },
-        { "title": "Headphones", "link": "#menu" },
-        { "title": "Chargers", "link": "#location" },
-        { "title": "My Account", "link": "#location" },
-        { "title": "Contact", "link": "#contact" }
-      ]
-    }
+  "header": {
+    "logo": "/brand-assets/logo-black.png",
+    "promoText": "Free shipping on orders over R$ 199",
+    "navLinks": [
+      {
+        "title": "Home",
+        "link": "#"
+      },
+      {
+        "title": "Products",
+        "link": "#products"
+      },
+      {
+        "title": "Headphones",
+        "link": "#menu"
+      },
+      {
+        "title": "Chargers",
+        "link": "#location"
+      },
+      {
+        "title": "My Account",
+        "link": "#location"
+      },
+      {
+        "title": "Contact",
+        "link": "#contact"
+      }
+    ]
+  },
+  "bannerCarousel": {
+    "slides": [
+      {
+        "image": "/banner-carousel/1.png"
+      },
+      {
+        "image": "/banner-carousel/2.png"
+      }
+    ],
+    "autoSlideInterval": 5000
   }
-  
+}
