--- a/app/data/locales/pt-BR.json
+++ b/app/data/locales/pt-BR.json
@@ -1,14 +1,20 @@
 {
-    "header": {
-      "promoText": "Frete grátis a partir de R$ 199 Reais",
-      "navLinks": [
-        { "title": "Home", "link": "#" },
-        { "title": "Produtos", "link": "#products" },
-        { "title": "Fones de Ouvido", "link": "#menu" },
-        { "title": "Carregadores", "link": "#location" },
-        { "title": "Minha Conta", "link": "#location" },
-        { "title": "Contato", "link": "#contact" }
-      ]
-    }
+  "header": {
+    "logo": "/brand-assets/logo-black.png",
+    "promoText": "Frete grátis a partir de R$ 199 Reais",
+    "navLinks": [
+      { "title": "Home", "link": "#" },
+      { "title": "Produtos", "link": "#products" },
+      { "title": "Fones de Ouvido", "link": "#menu" },
+      { "title": "Carregadores", "link": "#location" },
+      { "title": "Minha Conta", "link": "#location" },
+      { "title": "Contato", "link": "#contact" }
+    ]
+  },
+  "bannerCarousel": {
+    "slides": [
+      { "image": "/banner-carousel/1.png" },
+      { "image": "/banner-carousel/2.png" }
+    ]
+  }
 }
-  
