--- a/app/data/locales/es-ES.json
+++ b/app/data/locales/es-ES.json
@@ -111,5 +111,9 @@
       }
     ],
     "addCartButton": "Agregar al Carrito"
+  },
+  "bannerImage": {
+    "image": "/banners/3.png",
+    "label": "Promoción de Earpods"
   }
 }
