--- a/app/data/locales/pt-BR.json
+++ b/app/data/locales/pt-BR.json
@@ -111,5 +111,9 @@
       }
     ],
     "addCartButton": "Adicionar ao Carrinho"
+  },
+  "bannerImage": {
+    "image": "/banners/3.png",
+    "label": "Earpods Promoção"
   }
 }
