Fixing translations on ProductsCarousel component

--- a/app/data/locales/en-US.json
+++ b/app/data/locales/en-US.json
@@ -3,117 +3,57 @@
     "logo": "/brand-assets/logo-black.png",
     "promoText": "Free shipping on orders over R$ 199",
     "navLinks": [
-      {
-        "title": "Home",
-        "link": "#"
-      },
-      {
-        "title": "Products",
-        "link": "#products"
-      },
-      {
-        "title": "Headphones",
-        "link": "#menu"
-      },
-      {
-        "title": "Chargers",
-        "link": "#location"
-      },
-      {
-        "title": "My Account",
-        "link": "#location"
-      },
-      {
-        "title": "Contact",
-        "link": "#contact"
-      }
+      { "title": "Home", "link": "#" },
+      { "title": "Products", "link": "#products" },
+      { "title": "Headphones", "link": "#menu" },
+      { "title": "Chargers", "link": "#location" },
+      { "title": "My Account", "link": "#location" },
+      { "title": "Contact", "link": "#contact" }
     ]
   },
   "bannerCarousel": {
     "slides": [
-      {
-        "image": "/banners/1.png"
-      },
-      {
-        "image": "/banners/2.png"
-      }
+      { "image": "/banner-carousel/1.png" },
+      { "image": "/banner-carousel/2.png" }
     ]
   },
   "categoriesCards": [
-    {
-      "image": "/categories/1.png",
-      "title": "Airpods"
-    },
-    {
-      "image": "/categories/2.png",
-      "title": "Smartwatch"
-    },
-    {
-      "image": "/categories/3.png",
-      "title": "Headset"
-    },
-    {
-      "image": "/categories/4.png",
-      "title": "Microphone"
-    },
-    {
-      "image": "/categories/5.png",
-      "title": "Ring Light"
-    },
-    {
-      "image": "/categories/6.png",
-      "title": "Tripods"
-    }
+    { "image": "/categories/1.png", "title": "Airpods" },
+    { "image": "/categories/2.png", "title": "Smartwatch" },
+    { "image": "/categories/3.png", "title": "Headset" },
+    { "image": "/categories/4.png", "title": "Microphone" },
+    { "image": "/categories/5.png", "title": "Ring Light" },
+    { "image": "/categories/6.png", "title": "Tripods" }
   ],
   "productsCarousel": {
     "headerTitle": "Best Sellers",
     "headerButton": "View All",
     "bestSellers": [
-      {
-        "image": "/products/1.webp",
-        "title": "Bluetooth Headphones Readmi Airdots",
-        "price": 144.90
-      },
-      {
-        "image": "/products/2.webp",
-        "title": "Bluetooth Headphones TWS I12",
-        "price": 39.90
-      },
-      {
-        "image": "/products/3.webp",
-        "title": "Headphone JBL Tune 720BT",
-        "price": 315.00
-      },
-      {
-        "image": "/products/4.webp",
-        "title": "Power Bank Pineng 10000mAh",
-        "price": 49.90
-      },
-      {
-        "image": "/products/5.webp",
-        "title": "Microphone Fifine AM8",
-        "price": 269.90
-      },
-      {
-        "image": "/products/6.webp",
-        "title": "Smartwatch Ultra 9 T200",
-        "price": 267.00
-      },
-      {
-        "image": "/products/7.webp",
-        "title": "Headset Logitech H390",
-        "price": 206.90
-      },
-      {
-        "image": "/products/8.webp",
-        "title": "Ring Light Bi-Color 16cm",
-        "price": 54.90
-      }
+      { "image": "/products/1.webp", "title": "Bluetooth Earbuds Readmi Airdots", "price": 144.90 },
+      { "image": "/products/2.webp", "title": "Bluetooth Earbuds TWS I12", "price": 39.90 },
+      { "image": "/products/3.webp", "title": "Headphones JBL Tune 720BT", "price": 315.00 },
+      { "image": "/products/4.webp", "title": "Power Bank Pineng 10000mAh", "price": 49.90 },
+      { "image": "/products/5.webp", "title": "Microphone Fifine AM8", "price": 269.90 },
+      { "image": "/products/6.webp", "title": "Smartwatch Ultra 9 T200", "price": 267.00 },
+      { "image": "/products/7.webp", "title": "Headset Logitech H390", "price": 206.90 },
+      { "image": "/products/8.webp", "title": "Ring Light Bi-Color 16cm", "price": 54.90 }
     ],
     "addCartButton": "Add to Cart"
   },
   "bannerImage": {
     "image": "/banners/3.png",
     "label": "Earpods Promotion"
+  },
+  "headphones": {
+    "headerTitle": "Headphones",
+    "headerButton": "View All",
+    "bestSellers": [
+      { "image": "/products/1.webp", "title": "Bluetooth Earbuds Readmi Airdots", "price": 144.90 },
+      { "image": "/products/2.webp", "title": "Bluetooth Earbuds TWS I12", "price": 39.90 },
+      { "image": "/products/3.webp", "title": "Headphones JBL Tune 720BT", "price": 315.00 },
+      { "image": "/products/4.webp", "title": "Power Bank Pineng 10000mAh", "price": 49.90 },
+      { "image": "/products/7.webp", "title": "Headset Logitech H390", "price": 206.90 }
+    ],
+    "addCartButton": "Add to Cart"
   }
 }
