--- a/app/data/locales/pt-BR.json
+++ b/app/data/locales/pt-BR.json
@@ -147,5 +147,15 @@
       }
     ],
     "addCartButton": "Adicionar ao Carrinho"
-  }
+  },
+  "banners": [
+    {
+      "image": "/banners/4.png",
+      "label": "Fone de Ouvido Promo"
+    },
+    {
+      "image": "/banners/5.png",
+      "label": "Smartwatch Promo"
+    }
+  ]
 }
