--- a/app/data/locales/en-US.json
+++ b/app/data/locales/en-US.json
@@ -3,40 +3,112 @@
     "logo": "/brand-assets/logo-black.png",
     "promoText": "Free shipping on orders over R$ 199",
     "navLinks": [
-      { "title": "Home", "link": "#" },
-      { "title": "Products", "link": "#products" },
-      { "title": "Headphones", "link": "#menu" },
-      { "title": "Chargers", "link": "#location" },
-      { "title": "My Account", "link": "#location" },
-      { "title": "Contact", "link": "#contact" }
+      {
+        "title": "Home",
+        "link": "#"
+      },
+      {
+        "title": "Products",
+        "link": "#products"
+      },
+      {
+        "title": "Headphones",
+        "link": "#menu"
+      },
+      {
+        "title": "Chargers",
+        "link": "#location"
+      },
+      {
+        "title": "My Account",
+        "link": "#location"
+      },
+      {
+        "title": "Contact",
+        "link": "#contact"
+      }
     ]
   },
   "bannerCarousel": {
     "slides": [
-      { "image": "/banner-carousel/1.png" },
-      { "image": "/banner-carousel/2.png" }
+      {
+        "image": "/banner-carousel/1.png"
+      },
+      {
+        "image": "/banner-carousel/2.png"
+      }
     ]
   },
   "categoriesCards": [
-    { "image": "/categories/1.png", "title": "Airpods" },
-    { "image": "/categories/2.png", "title": "Smartwatch" },
-    { "image": "/categories/3.png", "title": "Headset" },
-    { "image": "/categories/4.png", "title": "Microphone" },
-    { "image": "/categories/5.png", "title": "Ring Light" },
-    { "image": "/categories/6.png", "title": "Tripods" }
+    {
+      "image": "/categories/1.png",
+      "title": "Airpods"
+    },
+    {
+      "image": "/categories/2.png",
+      "title": "Smartwatch"
+    },
+    {
+      "image": "/categories/3.png",
+      "title": "Headset"
+    },
+    {
+      "image": "/categories/4.png",
+      "title": "Microphone"
+    },
+    {
+      "image": "/categories/5.png",
+      "title": "Ring Light"
+    },
+    {
+      "image": "/categories/6.png",
+      "title": "Tripods"
+    }
   ],
   "productsCarousel": {
     "headerTitle": "Best Sellers",
     "headerButton": "View All",
     "bestSellers": [
-      { "image": "/products/1.webp", "title": "Bluetooth Earbuds Readmi Airdots", "price": 144.90 },
-      { "image": "/products/2.webp", "title": "Bluetooth Earbuds TWS I12", "price": 39.90 },
-      { "image": "/products/3.webp", "title": "Headphones JBL Tune 720BT", "price": 315.00 },
-      { "image": "/products/4.webp", "title": "Power Bank Pineng 10000mAh", "price": 49.90 },
-      { "image": "/products/5.webp", "title": "Microphone Fifine AM8", "price": 269.90 },
-      { "image": "/products/6.webp", "title": "Smartwatch Ultra 9 T200", "price": 267.00 },
-      { "image": "/products/7.webp", "title": "Headset Logitech H390", "price": 206.90 },
-      { "image": "/products/8.webp", "title": "Ring Light Bi-Color 16cm", "price": 54.90 }
+      {
+        "image": "/products/1.webp",
+        "title": "Bluetooth Earbuds Readmi Airdots",
+        "price": 144.90
+      },
+      {
+        "image": "/products/2.webp",
+        "title": "Bluetooth Earbuds TWS I12",
+        "price": 39.90
+      },
+      {
+        "image": "/products/3.webp",
+        "title": "Headphones JBL Tune 720BT",
+        "price": 315.00
+      },
+      {
+        "image": "/products/4.webp",
+        "title": "Power Bank Pineng 10000mAh",
+        "price": 49.90
+      },
+      {
+        "image": "/products/5.webp",
+        "title": "Microphone Fifine AM8",
+        "price": 269.90
+      },
+      {
+        "image": "/products/6.webp",
+        "title": "Smartwatch Ultra 9 T200",
+        "price": 267.00
+      },
+      {
+        "image": "/products/7.webp",
+        "title": "Headset Logitech H390",
+        "price": 206.90
+      },
+      {
+        "image": "/products/8.webp",
+        "title": "Ring Light Bi-Color 16cm",
+        "price": 54.90
+      }
     ],
     "addCartButton": "Add to Cart"
   },
@@ -48,11 +120,31 @@
     "headerTitle": "Headphones",
     "headerButton": "View All",
     "bestSellers": [
-      { "image": "/products/1.webp", "title": "Bluetooth Earbuds Readmi Airdots", "price": 144.90 },
-      { "image": "/products/2.webp", "title": "Bluetooth Earbuds TWS I12", "price": 39.90 },
-      { "image": "/products/3.webp", "title": "Headphones JBL Tune 720BT", "price": 315.00 },
-      { "image": "/products/4.webp", "title": "Power Bank Pineng 10000mAh", "price": 49.90 },
-      { "image": "/products/7.webp", "title": "Headset Logitech H390", "price": 206.90 }
+      {
+        "image": "/products/1.webp",
+        "title": "Bluetooth Earbuds Readmi Airdots",
+        "price": 144.90
+      },
+      {
+        "image": "/products/2.webp",
+        "title": "Bluetooth Earbuds TWS I12",
+        "price": 39.90
+      },
+      {
+        "image": "/products/3.webp",
+        "title": "Headphones JBL Tune 720BT",
+        "price": 315.00
+      },
+      {
+        "image": "/products/4.webp",
+        "title": "Power Bank Pineng 10000mAh",
+        "price": 49.90
+      },
+      {
+        "image": "/products/7.webp",
+        "title": "Headset Logitech H390",
+        "price": 206.90
+      }
     ],
     "addCartButton": "Add to Cart"
   },
@@ -64,6 +156,23 @@
     {
       "image": "/banners/5.png",
       "label": "Smartwatch Promotion"
+    }
+  ],
+  "benefitsCards": [
+    {
+      "icon": "bi bi-truck",
+      "title": "Guaranteed Delivery",
+      "subtitle": "We ship all over Brazil"
+    },
+    {
+      "icon": "bi bi-telephone-outbound",
+      "title": "Customer Support",
+      "subtitle": "Support Mon to Fri: 7am to 6pm"
+    },
+    {
+      "icon": "bi bi-credit-card",
+      "title": "Secure Payment",
+      "subtitle": "We accept Pix, cards, and boleto"
     }
   ]
 }
