Implementing Searchbar component

--- a/app/data/locales/en-US.json
+++ b/app/data/locales/en-US.json
@@ -9,7 +9,7 @@
       },
       {
         "title": "Products",
-        "link": "#products"
+        "link": "/pages/products"
       },
       {
         "title": "Headphones",
