--- a/app/data/locales/es-ES.json
+++ b/app/data/locales/es-ES.json
@@ -9,7 +9,7 @@
       },
       {
         "title": "Productos",
-        "link": "#products"
+        "link": "/pages/products"
       },
       {
         "title": "Auriculares",
