--- a/app/data/locales/pt-BR.json
+++ b/app/data/locales/pt-BR.json
@@ -9,7 +9,7 @@
       },
       {
         "title": "Produtos",
-        "link": "#products"
+        "link": "/pages/products"
       },
       {
         "title": "Fones de Ouvido",
